<resources>
    <string name="app_name">Central Heating Design</string>

    <string name="activity_main_title">Home Page</string>
    <string name="activity_how_many_floors_title">How Many Floors?</string>
    <string name="activity_overview_title">Overview</string>

    <string name="main_activity_description">This app helps you design a central heating system and
        help aid the heating designer in their job.</string>
    <string name="how_many_floors_activity_description">Please select how many floors this building
        has</string>
    <string name="overview_activity_description">Get info from previous page and showcase here.</string>
    <string name="overview_activity_please">PLEASE READ TIPS BEFORE STARTING TO EDIT ROOM!</string>


    <string name="begin_button">Begin</string>
    <string name="back_button">Back</string>
    <string name="next_button">Next</string>
    <string name="edit_room_button">Edit Room</string>
    <string name="tips_button">Tips</string>

    <string name="how_many_floors_prompt">Pick How Many Floors?</string>
    <string-array name="floors_arrays">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>

    <string name="expand_me">Slide Up To Expand</string>
    <string name="boiler">Boiler</string>
    <string name="radiator">Radiator</string>
    <string name="bed">Bed</string>
    <string name="bed_side">Bed Side Table</string>
    <string name="wardrobe">Wardrobe</string>
    <string name="constraint_checker">Constraint Checker</string>
    <string name="price_text">Price (£)</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

</resources>
